bindings/python/orderflow/_generated_signatures.py


    lib.of_get_cvd_enhancement_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_cvd_enhancement_snapshot.restype = ctypes.c_int32

    lib.of_get_pattern_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_pattern_snapshot.restype = ctypes.c_int32

    lib.of_get_volatility_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_volatility_snapshot.restype = ctypes.c_int32

    lib.of_get_noise_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_noise_snapshot.restype = ctypes.c_int32

    lib.of_get_hasbrouck_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_hasbrouck_snapshot.restype = ctypes.c_int32

    lib.of_get_almgren_chriss_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_almgren_chriss_snapshot.restype = ctypes.c_int32

    lib.of_get_spread_decomp_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_spread_decomp_snapshot.restype = ctypes.c_int32

    lib.of_get_acd_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_acd_snapshot.restype = ctypes.c_int32

    lib.of_get_regime_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_regime_snapshot.restype = ctypes.c_int32

    lib.of_get_kinetic_energy_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_kinetic_energy_snapshot.restype = ctypes.c_int32

    lib.of_get_dark_pool_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_dark_pool_snapshot.restype = ctypes.c_int32

    lib.of_get_options_flow_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_options_flow_snapshot.restype = ctypes.c_int32

    lib.of_get_futures_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_futures_snapshot.restype = ctypes.c_int32

    lib.of_get_vol_signature_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_vol_signature_snapshot.restype = ctypes.c_int32

    lib.of_get_agent_type_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_agent_type_snapshot.restype = ctypes.c_int32

    lib.of_get_dark_lit_correlation_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_dark_lit_correlation_snapshot.restype = ctypes.c_int32

    lib.of_get_institutional_flow_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_institutional_flow_snapshot.restype = ctypes.c_int32

    lib.of_get_oi_analysis_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_oi_analysis_snapshot.restype = ctypes.c_int32

    lib.of_get_analytics_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_analytics_snapshot.restype = ctypes.c_int32

    lib.of_get_derived_analytics_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_derived_analytics_snapshot.restype = ctypes.c_int32

    lib.of_get_session_candle_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_session_candle_snapshot.restype = ctypes.c_int32

    lib.of_get_interval_candle_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_uint64,
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_interval_candle_snapshot.restype = ctypes.c_int32

    lib.of_get_bar_series.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_bar_series.restype = ctypes.c_int32

    lib.of_get_signal_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_signal_snapshot.restype = ctypes.c_int32

    lib.of_compute_lob_features.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_double,
        ctypes.c_double,
        ctypes.c_double,
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_compute_lob_features.restype = ctypes.c_int32

    lib.of_engine_set_analytics_config.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfAnalyticsConfig"]),
    ]
    lib.of_engine_set_analytics_config.restype = ctypes.c_int32

    lib.of_get_metrics_json.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_char_p),
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_metrics_json.restype = ctypes.c_int32

    lib.of_get_adapter_inventory_json.argtypes = [
        ctypes.POINTER(ctypes.c_char_p),
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_adapter_inventory_json.restype = ctypes.c_int32

    lib.of_get_active_adapter_status_json.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_char_p),
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_active_adapter_status_json.restype = ctypes.c_int32

    lib.of_get_signal_descriptors_json.argtypes = [
        ctypes.POINTER(ctypes.c_char_p),
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_signal_descriptors_json.restype = ctypes.c_int32

    lib.of_get_signal_explanation_json.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.POINTER(ctypes.c_char_p),
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_signal_explanation_json.restype = ctypes.c_int32

    lib.of_get_signal_metrics_json.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_char_p),
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_signal_metrics_json.restype = ctypes.c_int32

    lib.of_string_free.argtypes = [
        ctypes.c_char_p,
    ]
    lib.of_string_free.restype = None
